全体の設定と各タスクの設定を分けた

--- a/test.yml
+++ b/test.yml
@@ -5,10 +5,11 @@ init_task:
     - multi
     - no-mouse
     - ansi
-  preview: echo {}
+  preview: echo preview={}
 expects:
   ctrl-t:
     continue: true
     input: date
     query: '1'
+    preview: pwd
 
