--- a/test.yml
+++ b/test.yml
@@ -8,6 +8,7 @@ init_task:
   preview: echo preview={}
 expects:
   ctrl-t:
+    stdout: cat -n | pbcopy
     continue:
       input: date
       query: '1'
