--- a/test.yml
+++ b/test.yml
@@ -14,6 +14,8 @@ binds:
   alt-r: toggle-preview
   alt-c: execute-silent(echo -n {} | pbcopy)
 expects:
+  ctrl-v:
+    stdout: wc -l
   ctrl-t:
     stdout: cat -n | pbcopy
     continue:
