--- a/test.yml
+++ b/test.yml
@@ -1,8 +1,8 @@
 fzf: /Users/hirano.shigetoshi/local/bin/fzf
 variables:
-    var1: date
+    var1: cat ~/20190410.txt
 base_task:
-  input: echo $var1
+  input: cat ~/20190410.txt
   opts:
     - multi
     - no-mouse
@@ -18,7 +18,7 @@ binds:
 expects:
   enter:
     stdout:
-      - nth: 4,1
+      - nth: 2
       - quote: "'"
       - prefix: bbb
       - suffix: aaa
@@ -26,4 +26,6 @@ expects:
       - join:
       - prefix: ccc
       - suffix: ddd
+    pipe: cat -n
+  ctrl-g:
     pipe: cat -n
