--- a/test.yml
+++ b/test.yml
@@ -2,7 +2,7 @@ fzf: /Users/hirano.shigetoshi/local/bin/fzf
 variables:
     var1: cat ~/20190410.txt
 base_task:
-  input: cat ~/20190410.txt
+  input: cat /Users/hirano.shigetoshi/PublicRepository/fzfer/fzfer.sh
   opts:
     - multi
     - no-mouse
