--- a/debug/test.01.yml
+++ b/debug/test.01.yml
@@ -2,7 +2,7 @@ fzf: /Users/hirano.shigetoshi/local/bin/fzf
 variables:
     var1: cat ~/20190410.txt
 base_task:
-  input: cat $yml
+  input: date | cat -n
   opts:
     - multi
     - no-mouse
