{pre_}を展開可能に

--- a/debug/test.02.yml
+++ b/debug/test.02.yml
@@ -7,7 +7,7 @@ base_task:
       - pipe: cat -n
 continue:
   ctrl-r:
-    input: cat ~/xxdr.pl
+    input: echo '{pre_content}'
     opts:
     - multi
     bind:
