--- a/debug/test.02.yml
+++ b/debug/test.02.yml
@@ -1,6 +1,7 @@
 base_task:
   input: cat ~/xxdr.pl
   transform: cat -n | awk '{print $1}'
+  preview: echo "{}"
   opts:
   - no-multi
   stdout:
@@ -8,7 +9,7 @@ base_task:
       - before-transformed:
 continue:
   ctrl-r:
-    input: echo '{pre_content}'
+    input: echo "{pre_content}"
     opts:
     - multi
     bind:
