transform時はオリジナルの出力をデフォルトに

--- a/debug/test.02.yml
+++ b/debug/test.02.yml
@@ -6,7 +6,7 @@ base_task:
   - no-multi
   stdout:
       enter:
-      - before-transformed:
+      - pipe: cat -n
 continue:
   ctrl-r:
     input: echo "{pre_content}"
