--- a/debug/test.02.yml
+++ b/debug/test.02.yml
@@ -1,7 +1,7 @@
 base_task:
   input: cat ~/xxdr.pl
   transform: cat -n | awk '{print $1}'
-  preview: echo "{var1}"
+  preview: echo {visible:2..-1}
   opts:
   - reverse
   - multi
